--- a/ECONOMIC DATA/src/components/footer.pug
+++ b/ECONOMIC DATA/src/components/footer.pug
@@ -8,3 +8,6 @@ include ../components/mixins/btn
         a.btn.footer__btn(href='#hero') Вернуться наверх
             svg.up-arrow(width="22" height="25" viewBox="0 0 22 25")
                 use(xlink:href="#upArrow")
+        a.btn.footer__btn.footer__btn--tablet(href='#hero')
+            svg.up-arrow(width="22" height="25" viewBox="0 0 22 25")
+                use(xlink:href="#upArrow")
