--- a/ECONOMIC DATA/src/components/mixins/page.pug
+++ b/ECONOMIC DATA/src/components/mixins/page.pug
@@ -10,6 +10,8 @@ mixin page(title, wrpClass, header=true)
       title=viewTitle
 
       link(href='assets/css/styles.min.css' rel='stylesheet')
+      link(href='https://unpkg.com/swiper@6/swiper-bundle.min.css' rel='stylesheet')
+
 
     body(class='page')
       include ../svgSprites
@@ -22,4 +24,5 @@ mixin page(title, wrpClass, header=true)
 
       include ../footer
 
+    script(src='https://unpkg.com/swiper@6/swiper-bundle.min.js')
     script(src='assets/js/index.js')
