--- a/ECONOMIC DATA/src/styles/components/btn.scss
+++ b/ECONOMIC DATA/src/styles/components/btn.scss
@@ -30,7 +30,6 @@
     &--white {
         background: var(--white);
         color: var(--black);
-        border: none;
 
         &:hover {
             background: var(--gradient);
@@ -42,6 +41,11 @@
             transform: rotate(45deg);
         }
     } 
+
+    @include phone {
+        padding-top: rem(18);
+        padding-bottom: rem(18);
+    }
 }
 
 .black-arrow,
