--- a/ECONOMIC DATA/src/pages/index.pug
+++ b/ECONOMIC DATA/src/pages/index.pug
@@ -81,35 +81,35 @@ include ../components/mixins/btn
                             p.article__dscr The Dynamics of Digital Disruption: Navigating New Markets
                             .article__link-block
                                 a.article__link(href="/") Смотреть
-                                svg.article__icon-right(width="602" height="150" viewBox="0 0 602 150")
+                                svg.article__icon(width="25" height="28" viewBox="0 0 25 28")
                                     use(xlink:href="#articleCardArrow")
                     .swiper-slide.article__slide
                         .article__card
                             p.article__dscr Rethinking Supply Chain Resilience: Lessons from Recent Crises
                             .article__link-block
                                 a.article__link(href="/") Смотреть
-                                svg.article__icon-right(width="602" height="150" viewBox="0 0 602 150")
+                                svg.article__icon(width="25" height="28" viewBox="0 0 25 28")
                                     use(xlink:href="#articleCardArrow")
                     .swiper-slide.article__slide
                         .article__card
                             p.article__dscr The Role of AI and Automation in Labor Market Evolution
                             .article__link-block
                                 a.article__link(href="/") Смотреть
-                                svg.article__icon-right(width="602" height="150" viewBox="0 0 602 150")
+                                svg.article__icon(width="25" height="28" viewBox="0 0 25 28")
                                     use(xlink:href="#articleCardArrow")
                     .swiper-slide.article__slide
                         .article__card
                             p.article__dscr Inflation Trends and Monetary Policy Shifts: A Comparative Analysis
                             .article__link-block
                                 a.article__link(href="/") Смотреть
-                                svg.article__icon-right(width="602" height="150" viewBox="0 0 602 150")
+                                svg.article__icon(width="25" height="28" viewBox="0 0 25 28")
                                     use(xlink:href="#articleCardArrow")
                     .swiper-slide.article__slide
                         .article__card
                             p.article__dscr Sustainable Growth Strategies in a Globalized Economy
                             .article__link-block
                                 a.article__link(href="/") Смотреть
-                                svg.article__icon-right(width="602" height="150" viewBox="0 0 602 150")
+                                svg.article__icon(width="25" height="28" viewBox="0 0 25 28")
                                     use(xlink:href="#articleCardArrow")
     section.section.step
         .container
