--- a/ECONOMIC DATA/src/pages/index.pug
+++ b/ECONOMIC DATA/src/pages/index.pug
@@ -8,17 +8,14 @@ include ../components/mixins/btn
             h1.hero__title Здесь ваш ИИ станет умнее            
             p.hero__dscr 10 000 качественных статей по экономике для обучения искусственного интеллекта
             .hero__btns
-                +btn('hero__btn btn--white') Скачать архив
+                a.hero__btn.btn--white.btn(href="#contact") Оставить заявку
                     svg.black-arrow(width="18" height="18" viewBox="0 0 18 18")
                         use(xlink:href="#blackArrow")
-                +btn(null) Посмотреть статьи
-                    svg.white-arrow(width="18" height="18" viewBox="0 0 18 18")
-                        use(xlink:href="#whiteArrow")
     section.about
         .container
             h2.section__title.about__title Economic Data - это
-            p.about__dscr Полный набор информации для экономического обучения ИИ - архив из 10 000 статей в формате PDF
-            +btn('about__btn') Скачать архив
+            p.about__dscr Полный набор информации для экономического обучения ИИ&nbsp;&mdash; архив из&nbsp;10&nbsp;000 статей в&nbsp;формате PDF
+            a.about__btn.btn(href="#contact") Оставить заявку
                 svg.white-arrow(width="18" height="18" viewBox="0 0 18 18")
                     use(xlink:href="#whiteArrow")
     section.section.reason
@@ -29,17 +26,17 @@ include ../components/mixins/btn
                     svg.reason__icon(width="140" height="140" viewBox="0 0 140 140")
                         use(xlink:href="#reasonIcon1")
                     h3.reason__title Анализ актуальных данных
-                    p.reason__dscr Доступ к закрытым статьям из ведущих экономических журналов повысит точность прогнозов ИИ
+                    p.reason__dscr Доступ к&nbsp;закрытым статьям из&nbsp;ведущих экономических журналов повысит точность прогнозов&nbsp;ИИ
                 .reason__card
                     svg.reason__icon(width="140" height="140" viewBox="0 0 140 140")
                         use(xlink:href="#reasonIcon2")
                     h3.reason__title Адаптация в условиях переменчивости
-                    p.reason__dscr Переработав разнообразную информацию, ваш ИИ сможет адаптироваться к новым условиям
+                    p.reason__dscr Переработав разнообразную информацию, ваш&nbsp;ИИ сможет адаптироваться к&nbsp;новым условиям
                 .reason__card
                     svg.reason__icon(width="140" height="140" viewBox="0 0 140 140")
                         use(xlink:href="#reasonIcon3")
                     h3.reason__title Инновационные подходы
-                    p.reason__dscr На основе знаний лучших авторов в области экономики, ваш ИИ сможет создавать новые методы анализа
+                    p.reason__dscr На&nbsp;основе знаний лучших авторов в&nbsp;области экономики, ваш&nbsp;ИИ сможет создавать новые методы анализа
     section.section.action
         .container.action__container
             +btn('action__btn action__btn--hidden') Скачать архив
@@ -48,8 +45,8 @@ include ../components/mixins/btn
             img.action__img(src="./assets/images/action.png", alt="Картинка")
             .action__text
                 h2.section__title.action__title оставляйте заявку
-                p.action__dscr Вы получите архив из 10 000 статей из экономических и юридических журналов, которых нет в открытом доступе
-                +btn('action__btn') Скачать архив
+                p.action__dscr Вы&nbsp;получите архив из&nbsp;10&nbsp;000 статей из&nbsp;экономических и&nbsp;юридических журналов, которых нет в&nbsp;открытом доступе
+                a.action__btn.btn(href="#contact") Оставить заявку
                     svg.white-arrow(width="18" height="18" viewBox="0 0 18 18")
                         use(xlink:href="#whiteArrow")
     section.section.article
@@ -62,18 +59,38 @@ include ../components/mixins/btn
                 h2.section__title.article__title Посмотрите примеры статей
                 .article__card.article__card--none
                     p.article__dscr The Dynamics of Digital Disruption: Navigating New Markets
+                    .article__link-block
+                        a.article__link(href="/") Смотреть
+                        svg.article__icon(width="25" height="28" viewBox="0 0 25 28")
+                            use(xlink:href="#articleCardArrow")
             .article__row
                 .article__card
                     p.article__dscr Rethinking Supply Chain Resilience: Lessons from Recent Crises
+                    .article__link-block
+                        a.article__link(href="/") Смотреть
+                        svg.article__icon(width="25" height="28" viewBox="0 0 25 28")
+                            use(xlink:href="#articleCardArrow")
                 .article__card
                     p.article__dscr The Role of AI and Automation in Labor Market Evolution
+                    .article__link-block
+                        a.article__link(href="/") Смотреть
+                        svg.article__icon(width="25" height="28" viewBox="0 0 25 28")
+                            use(xlink:href="#articleCardArrow")
             .article__row.article__row--space
                 .article__card
                     p.article__dscr Inflation Trends and Monetary Policy Shifts: A Comparative Analysis
+                    .article__link-block
+                        a.article__link(href="/") Смотреть
+                        svg.article__icon(width="25" height="28" viewBox="0 0 25 28")
+                            use(xlink:href="#articleCardArrow")
                 .article__card
                     svg.article__icon-card(width="188" height="128" viewBox="0 0 188 128")
                         use(xlink:href="#articleArrow3")
                     p.article__dscr Sustainable Growth Strategies in a Globalized Economy
+                    .article__link-block
+                        a.article__link(href="/") Смотреть
+                        svg.article__icon(width="25" height="28" viewBox="0 0 25 28")
+                            use(xlink:href="#articleCardArrow")
             .swiper.article__slider
                 .swiper-wrapper
                     .swiper-slide.article__slide
@@ -134,7 +151,7 @@ include ../components/mixins/btn
                 p.step__dscr Заполните заявку в форме ниже
                 p.step__dscr Получите счёт и оплатите архив
                 p.step__dscr Вышлем вам полный архив на почту
-    section.request
+    section.request(id='contact')
         svg.request__icon-right(width="602" height="150" viewBox="0 0 602 150")
             use(xlink:href="#requestArrow1")
         svg.request__icon-left(width="602" height="150" viewBox="0 0 602 150")
