added insurance journal page

--- a/UNKILL/src/components/mixins/aboutCard.pug
+++ b/UNKILL/src/components/mixins/aboutCard.pug
@@ -1,5 +1,6 @@
 mixin aboutCard(imgNumber, title,dscr)
     .about-card
         img.about-card__img(src=`./assets/images/about${imgNumber}.png`, alt="Картинка")
-        h2.about-card__title=title
-        p.about-card__dscr=dscr
+        .about-card__content
+            h2.about-card__title=title
+            p.about-card__dscr=dscr
