--- a/UNKILL/src/pages/index.pug
+++ b/UNKILL/src/pages/index.pug
@@ -5,7 +5,7 @@ include ../components/mixins/numberCard
 include ../components/mixins/bookCard
 include ../components/mixins/tag
 
-+page(null, 'Главная', 'index-page')
++page('main', 'Главная', 'index-page')
    section.hero-about.section
       img.hero-about__img.hero-about__img--block(src="./assets/images/hero-bg-xxs.png", alt="Фон")
       .container.hero-about__container
