--- a/UNKILL/src/styles/media-queries.scss
+++ b/UNKILL/src/styles/media-queries.scss
@@ -1,4 +1,5 @@
 $Breakpoint__xx-small: 375px;
+$Breakpoint__x-small-plus: 420px;
 $Breakpoint__x-small: 560px;
 $Breakpoint__small: 730px;
 $Breakpoint__medium: 920px;
@@ -35,15 +36,15 @@ $Breakpoint__large: 1200px;
   }
 }
 
+@mixin xs-plus {
+  @media screen and (max-width: #{$Breakpoint__x-small-plus}) {
+    @content;
+  }
+}
+
 @mixin xxs {
   @media screen and (max-width: #{$Breakpoint__xx-small}) {
     @content;
   }
 }
-
-
-
-
-
-
 
