--- a/UNKILL/src/components/headerInsuranceBusiness.pug
+++ b/UNKILL/src/components/headerInsuranceBusiness.pug
@@ -2,19 +2,19 @@ include ../components/mixins/btn
 
 header.header
     .container.header__container
-        a.header__logo-link(href="./index.html")
-            svg.header__logo-icon(width="169" height="25" viewBox="0 0 169 25")
-                use(xlink:href="#logo")
+        a.header__logo-link(href="./insuranceBusiness.html")
+            svg.header__logo-icon(width="161" height="20" viewBox="0 0 161 20")
+                use(xlink:href="#logoInsurance")
         nav.header__nav
-            a(class=(activePage === "journal" ? "header__link active" : "header__link") href="./journal.html") Журналы
+            a.header__link(href="#") Архив
             a(class=(activePage === "author" ? "header__link active" : "header__link") href="./author.html") Авторам
             a(class=(activePage === "contact" ? "header__link active" : "header__link") href="./contact.html") Контакты
         .header__shop
             svg.header__shop-icon(width="32" height="33" viewBox="0 0 32 33")
                 use(xlink:href="#shop")
-            a.header__shop-link(href="./market.html") В магазин
+            a.header__shop-link(href="./market.html") Каталог
             +btn('btn--transparent header__btn') Опубликовать
-            .header__select.select(id='header-select')
+            .header__insurance-select.select(id='header-insurance-select')
                 input(type="hidden" class="hidden-input")
 
         button.header__burger(id="burger-btn")
@@ -26,11 +26,11 @@ header.header
             svg.burger-menu__icon.close(width="24" height="20" viewBox="0 0 24 20")
                 use(xlink:href="#close")
             nav.burger-menu__links
-                a.burger-menu__link(href="./journal.html") Журналы
+                a.burger-menu__link(href="№") Архив
                 a.burger-menu__link(href="./author.html") Авторам
                 a.burger-menu__link(href="./contact.html") Контакты
             .burger-menu__shop
                 svg.header__shop-icon(width="32" height="33" viewBox="0 0 32 33")
                     use(xlink:href="#shop")
-                a.header__shop-link(href="./market.html") В магазин
+                a.header__shop-link(href="./market.html") Каталог
             +btn('btn--transparent header__btn') Опубликовать
