--- a/UNKILL/src/components/mixins/journalCard.pug
+++ b/UNKILL/src/components/mixins/journalCard.pug
@@ -1,4 +1,4 @@
-mixin journalCard(img, title, price, dscr)
+mixin journalCard(img, title, price, dscr, link)
     .journal-card
         img.journal-card__img(src=`./assets/images/journal${img}.png`, alt="Журнал")
         .journal-card__content
@@ -6,4 +6,4 @@ mixin journalCard(img, title, price, dscr)
                 h3.journal-card__title=title
                 p.btn.journal-card__price=price
             p.journal-card__dscr=dscr
-            a.journal-card__link(href="/") Опубликовать статью →
+            a.journal-card__link(href=`${link}`) Опубликовать статью →
