--- a/UNKILL/src/pages/insuranceBusiness.pug
+++ b/UNKILL/src/pages/insuranceBusiness.pug
@@ -11,7 +11,7 @@ include ../components/mixins/accordionItem
             .i-hero__content
                 h1.main-title.i-hero__title Публикация статей в ВАК
                 p.i-hero__dscr Ваша статья будет опубликована под руководством наших научных сотрудников
-                +btn('i-hero__btn') Опубликовать статью →
+                a.i-hero__btn.btn(href='#i-question') Опубликовать статью →
     section.section.i-archive
         .container.i-archive__container
             .i-archive__block
@@ -46,7 +46,8 @@ include ../components/mixins/accordionItem
                     p.i-about__text.i-about__text--bold 08.00.13 – Математические и инструментальные методы экономики (экономические науки)
                     p.i-about__text.i-about__text--bold 5.2.4. Финансы (экономические науки)
                     p.i-about__text.i-about__text--bold.i-about__text--bold-mb 5.2.5. Мировая экономика (экономические науки)
-                    p.i-about__text.i-about__text--mb Приглашаем ученых, работников системы высшего образования и специалистов к сотрудничеству в составе авторского коллектива журнала “Страховое дело”.
+                    p.i-about__text Приглашаем ученых, работников системы высшего образования и специалистов к сотрудничеству в составе авторского коллектива журнала “Страховое дело”.
+                    button.i-about__hidden Свернуть &nbsp;↑
     section.section.i-get
       .container
         h2.i-get__title.i-title После публикации вы получаете
@@ -62,7 +63,7 @@ include ../components/mixins/accordionItem
             +iStepCard('2', 'Рецензирование', 'Рецензент проверяет текст и при необходимости указывает, какие правки следует внести')
             +iStepCard('3', 'Оплата', 'Согласовывается номер журнала публикации и оплачивается годовая подписка на журнал')
             +iStepCard('4', 'Публикация', 'После публикации вам на почту высылается электронный вариант')
-    section.section.i-question
+    section.section.i-question(id='i-question')
         .container.i-question__container
             .i-question__content
                 h2.i-title.i-question__title Хотите опубликоваться?
