--- a/UNKILL/src/pages/market.pug
+++ b/UNKILL/src/pages/market.pug
@@ -41,9 +41,9 @@ include ../components/mixins/bookCard
         section.section
             h2.section__title Новинки
             .books.market-books
-                +bookCard('1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], true, '1990 ₽')
-                +bookCard('1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], true, '1990 ₽')
-                +bookCard('1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], true, '1990 ₽')
+                +bookCard('1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], false, '1990 ₽')
+                +bookCard('1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], false, '1990 ₽')
+                +bookCard('1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], false, '1990 ₽')
         section.section
             h2.section__title Издательство Анкил
             .books.market-books
@@ -55,9 +55,9 @@ include ../components/mixins/bookCard
         section.section
             h2.section__title Книги партнеров
             .books.market-books
-                +bookCard('1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], true, '1990 ₽')
-                +bookCard('1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], true, '1990 ₽')
-                +bookCard('1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], true, '1990 ₽')
+                +bookCard('1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], false, '1990 ₽')
+                +bookCard('1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], false, '1990 ₽')
+                +bookCard('1', 'Теория и практика страхования', 'Издательство «Анкил»', ['текст', 'аудио'], false, '1990 ₽')
         section.section
             h2.section__title Детские книги
             .books.market-books
