--- a/UNKILL/src/styles/components/editionCard.scss
+++ b/UNKILL/src/styles/components/editionCard.scss
@@ -28,6 +28,10 @@
         font-weight: 400;
         line-height: 140%;
         color: var(--grey);
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
     }
 
     @include e-md {
